--- a/css/styles.css
+++ b/css/styles.css
@@ -4577,7 +4577,7 @@ input[type="button"].btn--primary:focus {
 }
 
 .ss-copyright span::after {
-    content: "|";
+    /*content: "|";*/
     display: inline-block;
     padding: 0 .8rem 0 1rem;
     color: rgba(255, 255, 255, 0.1);
